--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "web-vitals": "^1.1.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "client": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "nodemon backend/server.js",
+    "start": "run-p server client"
   },
   "eslintConfig": {
     "extends": [
