--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "express": "^4.17.1",
     "formidable": "^1.2.2",
     "mysql2": "^2.2.5",
+    "nodemon": "^2.0.7",
+    "npm-run-all": "^4.1.5",
+    "papaparse": "^5.3.0",
     "pdf.js-extract": "^0.1.5",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
