--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "express": "^4.17.1",
     "formidable": "^1.2.2",
     "js-sha256": "^0.9.0",
+    "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
     "mysql2": "^2.2.5",
     "nodemon": "^2.0.7",
@@ -21,9 +23,11 @@
     "pdf.js-extract": "^0.1.5",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
+    "react-checkmark": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-select": "^4.3.0",
     "sequelize": "^6.5.1",
     "web-vitals": "^1.1.1"
   },
