--- a/package.json
+++ b/package.json
@@ -9,15 +9,11 @@
     "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "bootstrap": "^4.6.0",
-    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1",
     "formidable": "^1.2.2",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
-    "mysql2": "^2.2.5",
-    "nodemon": "^2.0.7",
     "npm-run-all": "^4.1.5",
     "papaparse": "^5.3.0",
     "pdf.js-extract": "^0.1.5",
@@ -28,18 +24,16 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-select": "^4.3.0",
-    "react-spinners-css": "^1.2.2",
-    "sequelize": "^6.5.1",
-    "web-vitals": "^1.1.1"
+    "react-spinners-css": "^1.2.2"
   },
   "scripts": {
-    "client": "react-scripts start",
-    "build": "react-scripts build",
+    "start-client": "react-scripts start",
+    "build": "react-scripts build && (cd backend && npm install)",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "nodemon backend/server.js",
-    "start": "run-p server client",
-    "sbu": "NODE_ENV=production run-p server client"
+    "start": "cd backend && npm start",
+    "all": "run-p start start-client",
+    "heroku-postbuild": "npm install && npm run build"
   },
   "eslintConfig": {
     "extends": [
