--- a/package.json
+++ b/package.json
@@ -1,56 +1,24 @@
 {
   "name": "mast",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0.0",
+  "scripts": {
+    "start": "node server.js",
+    "heroku-postbuild": "cd client && npm install && npm run build"
+  },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.5",
-    "@testing-library/user-event": "^12.8.3",
-    "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
-    "bootstrap": "^4.6.0",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "formidable": "^1.2.2",
     "jsonwebtoken": "^8.5.1",
-    "jwt-decode": "^3.1.2",
-    "moment": "^2.29.1",
-    "npm-run-all": "^4.1.5",
+    "mysql2": "^2.2.5",
+    "nodemon": "^2.0.7",
     "papaparse": "^5.3.0",
     "pdf.js-extract": "^0.1.5",
-    "react": "^17.0.1",
-    "react-bootstrap": "^1.5.2",
-    "react-checkmark": "^1.4.0",
-    "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "react-select": "^4.3.0",
-    "react-spinners-css": "^1.2.2"
-  },
-  "scripts": {
-    "start-client": "react-scripts start",
-    "build": "react-scripts build && (cd backend && npm install)",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "start": "cd backend && npm start",
-    "all": "run-p start start-client",
-    "heroku-postbuild": "npm install && npm run build"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "sequelize": "^6.6.2"
   }
 }
