--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "mysql2": "^2.2.5",
+    "nodemailer": "6.5.0",
     "nodemon": "^2.0.7",
     "papaparse": "^5.3.0",
     "pdf.js-extract": "^0.1.5",
