--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "nodemon": "^2.0.7",
     "papaparse": "^5.3.0",
     "pdf.js-extract": "^0.1.5",
+    "react-spinners": "^0.10.6",
     "sequelize": "^6.6.2"
   }
 }
