--- a/client/package.json
+++ b/client/package.json
@@ -6,19 +6,21 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
+    "apexcharts": "^3.26.0",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "dotenv": "^8.2.0",
     "jwt-decode": "^3.1.2",
     "npm-run-all": "^4.1.5",
     "react": "^17.0.1",
+    "react-apexcharts": "^1.3.7",
     "react-bootstrap": "^1.5.2",
     "react-checkmark": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-select": "^4.3.0",
-    "react-spinners-css": "^1.2.2"
+    "react-spinners": "^0.10.6"
   },
   "scripts": {
     "start": "react-scripts start",
