--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "sbu": "nodemon NODE_ENV=production server.js",
+    "sbu": "set NODE_ENV=production&&nodemon server.js",
     "server": "nodemon server.js"
   },
   "repository": {
