--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "secure": "export HTTPS=true&&SSL_CRT_FILE=cert.pem&&SSL_KEY_FILE=key.pem react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
