--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^4.6.0",
     "dotenv": "^8.2.0",
     "jwt-decode": "^3.1.2",
+    "node-sass": "^5.0.0",
     "npm-run-all": "^4.1.5",
     "react": "^17.0.1",
     "react-apexcharts": "^1.3.7",
