--- a/client/package.json
+++ b/client/package.json
@@ -28,7 +28,9 @@
     "secure": "export HTTPS=true&&SSL_CRT_FILE=cert.pem&&SSL_KEY_FILE=key.pem react-scripts start || set HTTPS=true&&set SSL_CRT_FILE=cert.pem&&set SSL_KEY_FILE=key.pem&&react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "multihost":"set HOST=0.0.0.0&&react-scripts start"
+
   },
   "eslintConfig": {
     "extends": [
@@ -48,5 +50,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "http://%IP%:5000"
 }
